--- a/style.css
+++ b/style.css
@@ -1,5 +1,79 @@
+@import url("https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.navigation {
+  display: flex;
+  padding: 15px 0;
+  background-color: #331b50;
+}
+
+.logo {
+  width: 150px;
+}
+
+.homepage {
+  display: flex;
+  background-color: #331b50;
+}
+
+.contents {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.texts {
+    margin-top: 50px;
+}
+
+.texts h1,
+p {
+  text-align: center;
+  padding: 10px;
+}
+
+.texts h1 {
+  font-size: 40px;
+  color: #eba328;
+  font-family: "Kanit", serif;
+}
+.texts p {
+  font-weight: bold;
+  color: rgb(241, 241, 241);
+  letter-spacing: 2px;
+  font-family: "Liter", serif;
+}
+
+.buttons {
+    margin-top: 20px;
+    display: flex;
+    font-family: "Liter", serif;
+    gap: 15px;
+    color: whitesmoke;
+}
+.buttons p {
+    padding: 10px;
+    border: 1px solid white;
+    font-weight: 500;
+    border-radius: 15px;
+    transition: all 0.3s ease-in-out;
+}
+
+.buttons p:hover {
+    background-color: aliceblue;
+    color: #331b50;
+    cursor: pointer;
+}
+
+.main-img {
+  width: 90%;
+  transition: all 0.5s ease-in-out;
+}
+.main-img:hover {
+  scale: 1.07;
 }
