--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Liter", sans-serif;
 }
 
 .navigation {
@@ -170,4 +171,21 @@ p {
   50% {
     transform: translateY(50px);
   }
+}
+
+/* courses section */
+.courses .description {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.courses p {
+  font-weight: bold;
+}
+
+.courses .head {
+  font-size: 30px;
+  font-family: "Kerit", sans-serif;
 }
