--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
 
 * {
   margin: 0;
@@ -11,6 +12,12 @@
   display: flex;
   padding: 15px 0;
   background-color: #331b50;
+}
+
+.contents {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
 
 .logo {
@@ -35,7 +42,7 @@ nav ul li {
 nav ul li:hover {
   color: #eba328;
   cursor: pointer;
-} 
+}
 
 .contactUs {
   background-color: #eba328;
@@ -50,36 +57,43 @@ nav ul li:hover {
 /* main page */
 .homepage {
   display: flex;
+  justify-content: center;
   padding-bottom: 30px;
   background-color: #331b50;
 }
 
-.contents {
+.main-page-content {
   display: flex;
-  align-items: center;
+  gap: 60px;
+  flex-direction: row;
+  padding: 0 30px;
+  margin-top: 30px;
+  justify-content: space-around;
+}
+
+/* heading, location, and button */
+.head-container {
+  display: flex;
   flex-direction: column;
 }
 
-.texts {
-  margin-top: 50px;
+.head-container .heading {
+  display: flex;
+  align-items: center;
 }
 
-.texts h1,
-p {
-  text-align: center;
-  padding: 10px;
+.heading h1 {
+  font-size: 80px;
+  color: #ffb73a;
+  font-weight: bolder;
+  font-family: "Outfit", serif;
 }
 
-.texts h1 {
-  font-size: 40px;
-  color: #eba328;
-  font-family: "Kanit", serif;
-}
-.texts p {
+.head-container .location {
   font-weight: bold;
-  color: rgb(241, 241, 241);
+  color: white;
+  margin-left: 5px;
   letter-spacing: 2px;
-  font-family: "Liter", serif;
 }
 
 .buttons {
@@ -92,6 +106,7 @@ p {
 }
 .buttons p {
   padding: 10px;
+  font-size: 20px;
   border: 1px solid white;
   font-weight: 500;
   border-radius: 15px;
@@ -104,6 +119,7 @@ p {
   cursor: pointer;
 }
 
+
 .main-img {
   width: 90%;
   transition: all 0.5s ease-in-out;
@@ -112,19 +128,8 @@ p {
   scale: 1.07;
 }
 
-.plane {
-  display: none;
-}
-
-.media {
-  display: flex;
-  width: 100%;
-  justify-content: center;
-}
-
 /* responsiveness for bigger screens*/
 @media only screen and (min-width: 900px) {
-
   #hb {
     display: none;
   }
@@ -159,57 +164,44 @@ p {
     justify-content: start;
   }
 
-  .plane {
-    display: flex;
-    width: 250px;
-    position: absolute;
-    z-index: 0;
-    right: 200px;
-
-    animation: plane 6s infinite;
-  }
 }
 
 @media only screen and (max-width: 900px) {
-  .navigation {
-    background-color: #090806;
-    }
-    
-    .list-elements {
-      display: none;
-    }
+  .logo {
+    margin: 10px;
+  }
 
-    #hb {
-      display: flex;
-      color: white;
-      font-size: 30px;
-    }
+  .main-page-content {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .head-container {
+    text-align: center;
+  }
+
+  .head-container h1 {
+    font-size: 60px;
+  }
+
+  .list-elements {
+    display: none;
+  }
+
+  #hb {
+    font-size: 30px;
+    color: #ffb73a;
+    filter: saturate(150%);
+    margin: 13px;
+    position: absolute;
+    right: 20px;
+  }
+
+  .main-img {
+    width: 100%;
+  }
 }
 
-
-/* paper plane animation */
-@keyframes plane {
-  0% {
-    transform: translateY(0);
-  }
-  50% {
-    transform: translateY(50px);
-  }
-}
 
 /* courses section */
-.courses .description {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.courses p {
-  font-weight: bold;
-}
-
-.courses .head {
-  font-size: 30px;
-  font-family: "Kerit", sans-serif;
-}
