--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap");
 
 * {
   margin: 0;
@@ -10,6 +10,8 @@
 
 .navigation {
   display: flex;
+  position: sticky;
+  top: 0;
   padding: 15px 0;
   background-color: #331b50;
 }
@@ -119,7 +121,6 @@ nav ul li:hover {
   cursor: pointer;
 }
 
-
 .main-img {
   width: 90%;
   transition: all 0.5s ease-in-out;
@@ -163,7 +164,6 @@ nav ul li:hover {
   .buttons {
     justify-content: start;
   }
-
 }
 
 @media only screen and (max-width: 900px) {
@@ -203,7 +203,6 @@ nav ul li:hover {
   }
 }
 
-
 /* courses section */
 .course-container {
   background-color: white;
@@ -215,12 +214,19 @@ nav ul li:hover {
   margin-top: 50px;
 }
 
+.content-desc .oc {
+  font-weight: bold;
+}
+
 .content-desc h2 {
   padding: 10px 0;
   font-size: 30px;
   color: #331b50;
 }
 
+.content-desc .about-course {
+  margin: 0 5%;
+}
 
 .course-categories {
   display: flex;
@@ -230,10 +236,82 @@ nav ul li:hover {
   padding: 10px 0;
 }
 
-.course-categories p{
+.course-categories p {
   border: 1px solid black;
-  padding: 5px 15px;
+  padding: 15px 30px;
   border-radius: 15px;
   color: #331b50;
   font-weight: 500;
+  line-height: 15px;
+  transition: all 0.3s ease-in-out;
+}
+
+.course-categories p:hover {
+  color: aliceblue;
+  background-color: #331b50;
+  cursor: pointer;
+}
+
+/* programming languages divs */
+
+.course-grid {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+  margin: 30px 20px;
+}
+
+.course-box {
+  flex: 1 1 300px;
+  max-width: 300px;
+  padding: 20px;
+  border: 1px solid rgb(209, 209, 209);
+  border-radius: 10px;
+  text-align: center;
+  transition: transform 0.3s;
+}
+
+.course-box:hover {
+  border: 1px solid #eba328;
+  cursor: pointer;
+}
+
+.course-box img {
+  width: 80px;
+  height: 80px;
+  object-fit: contain;
+  transition: all 0.5s ease-in-out;
+}
+.course-box img:hover {
+  scale: 1.1;
+}
+
+.view-more {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin: 20px 0;
+}
+.view-more button {
+  padding: 10px 15px;
+  border: 1px solid #5a2d82;
+  background: #fff;
+  color: #5a2d82;
+  border-radius: 15px;
+  cursor: pointer;
+  font-size: 14px;
+  transition: all 0.3s ease-in-out;
+}
+.view-more button:hover {
+  background-color: #5a2d82;
+  color: white;
+}
+
+
+@media (max-width: 768px) {
+  .course-box {
+    flex: 1 1 100%; 
+    max-width: 95%; 
+  }
 }
