--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Prompt:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 * {
   margin: 0;
@@ -88,7 +89,7 @@ nav ul li:hover {
   font-size: 80px;
   color: #ffb73a;
   font-weight: bolder;
-  font-family: "Outfit", serif;
+  font-family: "Prompt", serif;
 }
 
 .head-container .location {
@@ -220,12 +221,14 @@ nav ul li:hover {
 
 .content-desc h2 {
   padding: 10px 0;
-  font-size: 30px;
-  color: #331b50;
+  font-size: 35px;
+  color: #5a2d82;
+  font-family: "Prompt", serif;
 }
 
 .content-desc .about-course {
   margin: 0 5%;
+  color: grey;
 }
 
 .course-categories {
@@ -237,9 +240,10 @@ nav ul li:hover {
 }
 
 .course-categories p {
-  border: 1px solid black;
+  border: 1px solid #331b50;
   padding: 10px 20px;
   border-radius: 15px;
+  font-size: 20px;
   color: #331b50;
   font-weight: 500;
   line-height: 15px;
@@ -317,3 +321,52 @@ nav ul li:hover {
 }
 
 /* about us section */
+.about-us {
+  display: flex;
+  background-color: #f6f1fe;
+  flex-direction: column;
+  align-items: center;
+}
+
+.about-text {
+  display: flex;
+  flex-direction: column;
+  padding-top: 40px;
+  text-align: center;
+  align-items: center;
+}
+
+.ab-title {
+  font-size: 15px;
+}
+
+.ab-head {
+  font-size: 30px;
+  color: #5a2d82;
+  margin: 15px 7%;
+  font-family: "Prompt", serif;
+}
+
+.ab-desc {
+  margin: 15px 5%;
+  color: grey;
+  line-height: 25px;
+}
+
+.about-button {
+  width: 150px;
+  padding: 10px;
+  background: transparent;
+  border: 1px solid #5a2d82;
+  border-radius: 15px;
+  font-size: 15px;
+  letter-spacing: 2px;
+  color: #5a2d82;
+  margin: 10px 0 30px 0;
+}
+
+
+/* about-us page image */
+.about-image {
+  width: 350px;
+}
