--- a/style.css
+++ b/style.css
@@ -59,8 +59,6 @@ nav ul li:hover {
 
 /* main page */
 .homepage {
-  display: flex;
-  justify-content: center;
   padding-bottom: 30px;
   background-color: #331b50;
 }
@@ -70,13 +68,13 @@ nav ul li:hover {
   gap: 60px;
   flex-direction: row;
   padding: 0 30px;
-  margin-top: 30px;
-  justify-content: space-around;
 }
 
 /* heading, location, and button */
 .head-container {
   display: flex;
+  flex: 1;
+  border: 1px solid black;
   flex-direction: column;
 }
 
@@ -122,6 +120,11 @@ nav ul li:hover {
   cursor: pointer;
 }
 
+.image-container {
+  flex: 1;
+  border: 1px solid black;
+}
+
 .main-img {
   width: 90%;
   transition: all 0.5s ease-in-out;
@@ -144,21 +147,20 @@ nav ul li:hover {
   }
 
   .main-img {
-    width: 600px;
     margin-left: 50px;
     z-index: 2;
   }
 
-  .texts {
+  .heading {
     width: 400px;
     margin-left: 40px;
   }
 
-  .texts h1 {
+  .heading h1 {
     font-size: 60px;
     text-align: left;
   }
-  .texts p {
+  .heading p {
     text-align: left;
   }
 
@@ -183,7 +185,7 @@ nav ul li:hover {
   }
 
   .head-container h1 {
-    font-size: 60px;
+    font-size: 80px;
   }
 
   .list-elements {
