--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Prompt:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Prompt:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 * {
   margin: 0;
@@ -12,6 +12,7 @@
 .navigation {
   display: flex;
   position: sticky;
+  z-index: 1;
   top: 0;
   padding: 15px 0;
   background-color: #331b50;
@@ -146,11 +147,6 @@ nav ul li:hover {
     justify-content: space-between;
     flex-direction: row;
     padding: 15px 50px;
-  }
-
-  .main-img {
-    /* margin-left: 50px; */
-    z-index: 2;
   }
 
   .heading {
@@ -316,11 +312,10 @@ nav ul li:hover {
   color: white;
 }
 
-
 @media (max-width: 768px) {
   .course-box {
-    flex: 1 1 100%; 
-    max-width: 95%; 
+    flex: 1 1 100%;
+    max-width: 95%;
   }
 }
 
@@ -335,9 +330,9 @@ nav ul li:hover {
 .about-text {
   display: flex;
   flex-direction: column;
+  align-items: center;
   padding-top: 40px;
   text-align: center;
-  align-items: center;
 }
 
 .ab-title {
@@ -367,10 +362,96 @@ nav ul li:hover {
   letter-spacing: 2px;
   color: #5a2d82;
   margin: 10px 0 30px 0;
+  transition: all 0.3s ease-in-out;
+}
+.about-button:hover {
+  color: rgb(240, 240, 240);
+  background-color: #5a2d82;
+  cursor: pointer;
+}
+
+/* about-us page image */
+.about-image-container {
+  display: flex;
+}
+
+.about-image {
+  width: 350px;
+  transition: all 0.5s ease-in-out;
+}
+.about-image:hover {
+  scale: 1.03;
+}
+
+/* bigger screen view for about section */
+
+@media only screen and (min-width: 900px) {
+  .about-us {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .about-text {
+    width: 400px;
+    text-align: left;
+  }
+
+  .about-image-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
+/* achievements section in about page */
+.stats-container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
+}
+
+.stat-box {
+  background: white;
+  padding: 20px;
+  border-radius: 12px;
+  text-align: center;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.stat-box h2 {
+  color: #5a2d82;
+  margin: 0;
+  font-size: 24px;
+}
+
+.stat-box p {
+  color: #333;
+  margin: 5px 0 0;
+  font-size: 16px;
+}
+
+/* smaller screen alignment for the achievemnts section */
+@media (max-width: 900px) {
+  .stats-container {
+    width: 100%;
+    display: flex;
+    margin: 50px 0;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .stat-box {
+    width: 90%;
+    min-width: 90%;
+  }
 }
 
 
-/* about-us page image */
-.about-image {
-  width: 350px;
+/*-----Specialties page-----*/
+.specialty {
+  width: 100%;
+  height: 100vh;
+  background-color: aqua;
 }
