--- a/style.css
+++ b/style.css
@@ -306,7 +306,7 @@ nav ul li:hover {
   color: #5a2d82;
   border-radius: 15px;
   cursor: pointer;
-  font-size: 14px;
+  font-size: 19px;
   transition: all 0.3s ease-in-out;
 }
 .view-more button:hover {
@@ -360,7 +360,7 @@ nav ul li:hover {
   background: transparent;
   border: 1px solid #5a2d82;
   border-radius: 15px;
-  font-size: 15px;
+  font-size: 19px;
   letter-spacing: 2px;
   color: #5a2d82;
   margin: 10px 0 30px 0;
@@ -505,6 +505,10 @@ nav ul li:hover {
 .spec-card img {
   width: 350px;
   border-radius: 15px;
+  transition: all 0.3s ease-in-out;
+}
+.spec-card img:hover {
+  transform: scale(1.04);
 }
 
 .spec-card h3 {
@@ -530,12 +534,11 @@ nav ul li:hover {
 }
 
 /* Image alignment on mobile view */
-@media (min-width: 400px){
+@media (min-width: 400px) {
   .spec-card img {
-    width: 95%;
+    min-width: 90%;
   }
 }
-
 
 /* spec cards alignment in desktop screens */
 @media (min-width: 1100px) {
@@ -557,5 +560,21 @@ nav ul li:hover {
   .spec-card img {
     width: 90%;
   }
-  
+}
+
+/* Know more button in spec page */
+.spec-button {
+  padding: 10px 25px;
+  border: 1px solid #5a2d82;
+  background: #fff;
+  color: #5a2d82;
+  border-radius: 15px;
+  cursor: pointer;
+  font-size: 19px;
+  margin: 0 0 30px 0;
+  transition: all 0.3s ease-in-out;
+}
+.spec-button:hover {
+  background-color: #5a2d82;
+  color: white;
 }
