--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
   font-family: "Liter", sans-serif;
 }
 
+
 .navigation {
   display: flex;
   position: sticky;
@@ -341,9 +342,6 @@ nav ul li:hover {
   text-align: center;
 }
 
-.ab-title {
-  font-size: 15px;
-}
 
 .ab-head {
   font-size: 30px;
@@ -611,7 +609,6 @@ nav ul li:hover {
 
 .process-title {
   color: #e3e3e3;
-  font-size: 18px;
   margin: 50px 0 5px 0;
 }
 
@@ -622,32 +619,112 @@ nav ul li:hover {
 }
 
 .process-list {
-  margin-top: 30px;
+  margin: 20px 0 50px 0;
 }
 
 .process-list li {
   color: white;
   margin: 15px 0;
+  list-style-type: none;
 }
 
 .process-list i {
   color: #eba328;
 }
 
-
+/* aligning the paragraph with lesser with in bigger screens */
 @media (min-width: 600px) {
+  .process-desc {
+    width: 80%;
+    text-align: center;
+  }
   .process-texts {
-    width: 400px;
-    flex: 1;
-    text-align: left;
-  }
-  
-  .process {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+    align-items: center;
   }
+}
 
-  .process-illustration {
-    flex: 2;
+
+/* ----------------- */
+/* -Placement page- */
+/* --------------- */
+.placements {
+  text-align: center;
+  padding: 50px 20px;
+}
+
+.placement-details {
+  margin: 0 auto;
+}
+
+.placement-heading {
+  font-size: 35px;
+  font-family: "Prompt", serif;
+  color: #331b50;
+  margin: 10px 0;
+}
+
+.placement-desc {
+  letter-spacing: 1px;
+  margin: 0 30px;
+  color: #4e4e4e;
+}
+
+.placement-companies {
+  display: grid;
+  gap: 20px;
+  margin-top: 30px;
+  padding: 0 20px;
+}
+
+.company-card {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 15px;
+  border-radius: 8px;
+}
+
+.company-card img {
+  max-width: 100%;
+  height: auto;
+}
+
+.placement-button {
+  padding: 10px 25px;
+  border: 1px solid #5a2d82;
+  background: #fff;
+  color: #5a2d82;
+  border-radius: 15px;
+  cursor: pointer;
+  font-size: 19px;
+  margin: 30px 0 40px 0;
+  transition: all 0.3s ease-in-out;
+}
+.placement-button:hover {
+  background-color: #5a2d82;
+  color: white;
+}
+
+/* Grid Layout for Different Screens */
+@media (min-width: 1024px) {
+  /* Desktop: 5 columns */
+  .placement-companies {
+      grid-template-columns: repeat(5, 1fr);
+  }
+}
+
+@media (min-width: 768px) and (max-width: 1023px) {
+  /* Tablet: 3 columns */
+  .placement-companies {
+      grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media (max-width: 767px) {
+  /* Mobile: 2 columns */
+  .placement-companies {
+      grid-template-columns: repeat(2, 1fr);
   }
 }
