--- a/style.css
+++ b/style.css
@@ -538,7 +538,7 @@ nav ul li:hover {
 }
 
 /* Image alignment on mobile view */
-@media (min-width: 400px) {
+@media (max-width: 500px) {
   .spec-card img {
     max-width: 95%;
   }
