--- a/style.css
+++ b/style.css
@@ -741,8 +741,11 @@ nav ul li:hover {
 .plc2-text {
   color: #e3e3e3;
   text-align: center;
-  margin-top: 30px;
-  border: 1px solid yellow;
+  margin-top: 50px;
+}
+
+.plc2-title {
+  margin-top: 25px;
 }
 
 .plc2-heading {
@@ -762,10 +765,8 @@ nav ul li:hover {
 
 .carousel-container {
   position: relative;
-  /* width: 80%;  */
-  max-width: 800px;
+  max-width: 50%;
   overflow: hidden;
-  border: 1px solid white;
 }
 .carousel {
   display: flex;
@@ -781,10 +782,8 @@ nav ul li:hover {
   flex: 0 0 auto;
 }
 .card img {
-  width: 100px;
-  height: 100px;
-  border-radius: 50%;
   object-fit: cover;
+  height: 200px;
 }
 .info {
   margin-top: 10px;
@@ -815,33 +814,53 @@ nav ul li:hover {
   right: 0;
 }
 
-/* Adjusting the gallery in mobile view */
-@media (max-width: 768px) {
+/* hiding the carousel container in small screens */
+@media (max-width: 900px) {
   .carousel-container {
-    max-width: 90%;
-    overflow: hidden;
     display: none;
-    visibility: hidden;
   }
+}
 
-  .carousel {
+/* aligning the headings and paragraph horizontally on bigger screen */
+@media (min-width: 1000px) {
+  .plc2-text {
+    max-width: 80%;
     display: flex;
-    gap: 10px;
-    scroll-snap-type: x mandatory;
-    overflow-x: auto;
+    flex-direction: row;
+  }
+
+  .plc2-heading {
+    margin: 0;
+  }
+
+  .plc2-head-items {
+    flex: 1;
+    padding: 30px;
+    text-align: start;
+  }
+  .plc2desc-cn {
+    flex: 2;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     justify-content: center;
-    padding: 10px;
+    text-align: left;
   }
-  .card {
-    min-width: 80%;
-    margin: auto;
-  }
+}
 
-  .previous {
-    left: -10px;
-  }
-
-  .next {
-    right: -10px;
-  }
+/* placement 2 button */
+.plc2-button {
+  padding: 10px 25px;
+  border: 1px solid #d6d6d6;
+  background: transparent;
+  color: #e0e0e0;
+  border-radius: 15px;
+  cursor: pointer;
+  font-size: 19px;
+  margin: 30px 0 10px 0;
+  transition: all 0.3s ease-in-out;
+}
+.plc2-button:hover {
+  color: #5a2d82;
+  background-color: white;
 }
