--- a/style.css
+++ b/style.css
@@ -9,6 +9,12 @@
   font-family: "Liter", sans-serif;
 }
 
+/* removing the preset style for URLs throughout the website */
+a {
+  text-decoration: none;
+  color: rgb(234, 234, 234);
+}
+
 .navigation {
   display: flex;
   position: sticky;
@@ -691,8 +697,8 @@ nav ul li:hover {
 .placement-button {
   padding: 10px 25px;
   border: 1px solid #5a2d82;
-  background: #fff;
-  color: #5a2d82;
+  background: #ffffff;
+  color: #331b50;
   border-radius: 15px;
   cursor: pointer;
   font-size: 19px;
@@ -741,7 +747,7 @@ nav ul li:hover {
 .plc2-text {
   color: #e3e3e3;
   text-align: center;
-  margin-top: 50px;
+  margin-top: 30px;
 }
 
 .plc2-title {
@@ -857,10 +863,15 @@ nav ul li:hover {
   border-radius: 15px;
   cursor: pointer;
   font-size: 19px;
-  margin: 30px 0 10px 0;
+  margin: 10px 0 40px 0;
   transition: all 0.3s ease-in-out;
 }
 .plc2-button:hover {
   color: #5a2d82;
   background-color: white;
 }
+
+
+/* //////////////////////// */
+/* Join Course Section /// */
+/* ////////////////////// */
