--- a/style.css
+++ b/style.css
@@ -871,7 +871,6 @@ nav ul li:hover {
   background-color: white;
 }
 
-
 /* //////////////////////// */
 /* Join Course Section /// */
 /* ////////////////////// */
@@ -879,16 +878,23 @@ nav ul li:hover {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center
+  justify-content: center;
+  padding: 50px;
 }
 
 .course-card {
-  width: 70%;
-  background-color: #331b50;
+  width: 80%;
+  background-color: #502d7c;
   display: flex;
   flex-direction: column;
+  padding: 20px;
+  text-align: center;
 }
 
-.course-join-image {
-  width: 50%;
+.course-card-head {
+  font-size: 35px;
+  font-family: "Prompt", serif;
+  color: #e2e2e2;
+  margin: 10px;
+  font-weight: 600;
 }
