--- a/style.css
+++ b/style.css
@@ -893,7 +893,6 @@ nav ul li:hover {
   flex-direction: column;
   text-align: center;
   border-radius: 20px;
-  box-shadow: 2px 3px 4px rgb(69, 69, 69);
 }
 
 .course-card-heading {
@@ -924,6 +923,15 @@ nav ul li:hover {
   cursor: pointer;
   color: #dedede;
   background: transparent;
+}
+
+.join-course-image {
+  transform: scale(1);
+  transition: all 0.5s ease-in-out;
+  filter: drop-shadow(8px 8px 10px rgb(58, 58, 58));
+}
+.join-course-image:hover {
+  transform: scale(1.05);
 }
 
 /* fixing the course card width and layout in bigger screens */
