--- a/style.css
+++ b/style.css
@@ -1049,9 +1049,9 @@ nav ul li:hover {
 
 .testimonials-button {
   padding: 10px 25px;
-  border: 1px solid #331b50;
+  border: 1px solid #562b80;
   background: transparent;
-  color: #331b50;
+  color: #562b80;
   border-radius: 15px;
   cursor: pointer;
   font-size: 17px;
@@ -1061,4 +1061,44 @@ nav ul li:hover {
 .testimonials-button:hover {
   color: #dedede;
   background-color: #331b50;
+}
+
+.desktop-testimonial-cards {
+  display: none;
+}
+
+/* Making the mobile card invisible and desktop cards visible when width is 1000px*/
+@media (min-width: 1000px) {
+  .testimonials-personal {
+    display: none;
+  }
+
+  .desktop-testimonial-cards {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    gap: 25px;
+  }
+
+  .testimonials-desktop {
+    flex: 1;
+    max-width: 500px;
+    background-color: rgb(255, 255, 255);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    padding: 15px;
+    border-radius: 15px;
+  }
+
+  .testimonials-desktop p {
+    color: #3b3b3b;
+    line-height: 28px;
+    margin: 15px 0 0 0;
+  }
+
+  .testimonials-desktop img {
+    transform: scale(0.8);
+  }
 }
