--- a/style.css
+++ b/style.css
@@ -979,7 +979,7 @@ nav ul li:hover {
 
 /* 'What our students say' card */
 .testimonials-card {
-  margin: 30px;
+  margin: 30px 30px 50px 30px;
   background-color: #f7f1ff;
   padding: 20px;
   border-radius: 15px;
@@ -1100,5 +1100,120 @@ nav ul li:hover {
 
   .testimonials-desktop img {
     transform: scale(0.8);
+  }
+}
+
+/* ////////////////// */
+/* Advisor section// */
+/* //////////////// */
+.advisor-section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+  background: linear-gradient(102deg, #502d7b 20%, #321654 80%);
+}
+
+.advisor-content {
+  display: flex;
+  flex-direction: column;
+  max-width: 1100px;
+  width: 100%;
+  gap: 20px;
+  text-align: center;
+}
+
+.image-container img {
+  max-width: 500px;
+  border-radius: 50%;
+}
+
+.form-container {
+  padding: 30px;
+}
+
+/* title, heading, description */
+.form-heading {
+  font-size: 28px;
+  color: #fff;
+  margin-bottom: 10px;
+}
+
+.form-container p {
+  font-size: 14px;
+  line-height: 1.5;
+  margin-bottom: 20px;
+}
+
+.form-container form {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+.form-container form input,
+.form-container form textarea,
+.form-container form select {
+  width: 100%;
+  padding: 12px;
+  background-color: #5b347e;
+  border: none;
+  border-radius: 8px;
+  color: #fff;
+  font-size: 14px;
+}
+
+.form-container form textarea {
+  resize: vertical;
+  min-height: 100px;
+  max-height: 300px;
+}
+
+.form-container form select {
+  cursor: pointer;
+  appearance: none;
+  background-repeat: no-repeat;
+  background-position: right 15px center;
+}
+
+.form-container form button {
+  background-color: #ff8c00;
+  color: #fff;
+  border: none;
+  padding: 12px 20px;
+  border-radius: 8px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+  font-weight: bold;
+}
+
+.form-container form button i {
+  font-size: 18px;
+}
+
+/* Responsive Design */
+@media (min-width: 600px) {
+  .advisor-content {
+    flex-direction: row;
+    align-items: center;
+  }
+
+  .form-container {
+    width: 60%;
+    text-align: left;
+  }
+
+}
+
+@media (min-width: 1025px) {
+  .advisor-content {
+    flex-direction: row;
+  }
+
+  .form-container {
+    width: 50%;
   }
 }
