--- a/style.css
+++ b/style.css
@@ -933,6 +933,7 @@ nav ul li:hover {
 }
 
 .join-course-image {
+  width: 80%;
   transition: all 0.2s linear;
   filter: drop-shadow(3px 3px 5px rgba(156, 156, 156, 0.614));
 }
