--- a/style.css
+++ b/style.css
@@ -1170,7 +1170,7 @@ input, select, textarea {
   padding: 20px;
   border-radius: 15px;
   border: none;
-  color: black;
+  color: rgb(16, 16, 16);
 }
 
 
