--- a/style.css
+++ b/style.css
@@ -1184,7 +1184,12 @@ select option {
 /* reference areas */
 
 
-
+@media (max-width: 750px) {
+  .enquiry-form-body {
+    max-width: 500px;
+    border: 3px solid yellow;
+  }
+}
 
 
 
